--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About Us</a></li>
-                <li><a href="#">Skills</a></li>
+                <li><a href="#skills">Skills</a></li>
                 <li><a href="#">Contact Us</a></li>
             </ul>
 
@@ -36,7 +36,31 @@
         </div>
     </header>
 
-
+<div id="skills">
+    <div class="skill">
+        <div class="language">
+            HTML
+        </div>
+        <div class="skill-bar">
+            <div class="percentage" per="75%" style="max-width:75%"></div>
+        </div>
+    </div>
+    <div class="skill">
+        <div class="language">
+            CSS
+        </div>
+        <div class="skill-bar">
+            <div class="percentage" per="50%" style="max-width:50%"></div>
+        </div>
+    </div>
+    <div class="skill">
+        <div class="language">
+            JAVASCRIPT
+        </div>
+        <div class="skill-bar">
+            <div class="percentage" per="30%" style="max-width:30%"></div>
+        </div>
+    </div>
+</div>
 </body>
-
 </html>
