--- a/index.html
+++ b/index.html
@@ -36,31 +36,54 @@
         </div>
     </header>
 
-<div id="skills">
-    <div class="skill">
-        <div class="language">
-            HTML
+
+
+
+
+
+
+
+
+<div class="skill-section">
+    <div id="skills">
+        <div class="skill">
+            <div class="language">
+                HTML
+            </div>
+            <div class="skill-bar">
+                <div class="percentage" per="75%" style="max-width:75%"></div>
+            </div>
         </div>
-        <div class="skill-bar">
-            <div class="percentage" per="75%" style="max-width:75%"></div>
+        <div class="skill">
+            <div class="language">
+                CSS
+            </div>
+            <div class="skill-bar">
+                <div class="percentage" per="50%" style="max-width:50%"></div>
+            </div>
+        </div>
+ 
+    
+        <div class="skill">
+            <div class="language">
+                FIGMA
+            </div>
+            <div class="skill-bar">
+                <div class="percentage" per="40%" style="max-width:40%"></div>
+            </div>
+        </div>
+
+        <div class="skill">
+            <div class="language">
+                JAVASCRIPT
+            </div>
+            <div class="skill-bar">
+                <div class="percentage" per="30%" style="max-width:30%"></div>
+            </div>
         </div>
     </div>
-    <div class="skill">
-        <div class="language">
-            CSS
-        </div>
-        <div class="skill-bar">
-            <div class="percentage" per="50%" style="max-width:50%"></div>
-        </div>
-    </div>
-    <div class="skill">
-        <div class="language">
-            JAVASCRIPT
-        </div>
-        <div class="skill-bar">
-            <div class="percentage" per="30%" style="max-width:30%"></div>
-        </div>
-    </div>
+    <img src="images/skills.jpeg">
+
 </div>
 </body>
 </html>
