--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PORTFOLIO</title>
     <link rel="stylesheet" href="style.css">
-
+<!-- font awesome -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,9 +21,12 @@
             <h2 id="portfolio">Port<span>folio</span></h2>
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">About Us</a></li>
+                <li><a href="#ABOUT">About Us</a></li>
                 <li><a href="#skills">Skills</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="#">Projects</a></li>
+                                <li><a href="#">Contact Us</a></li>
+
+
             </ul>
 
         </nav>
@@ -30,19 +34,37 @@
             <img src="images/ceca670d-31cd-4f7b-a10e-10bc5b69c181-removebg.png" alt="">
         </div>
         <div class="about">
-            <h3>Hello,My name is</h3>
-            <h1>Bharathikannan</h1>
-            <h2>I'm a Web developer</h2>
+            <h3>Hello👋</h3>
+            <h2> I'm Bharathikannan</h2>
+            <h3>A skilled fullstack developer.</h3>
         </div>
     </header>
 
+<!-- ABOUT -->
+
+<div class="title" id="ABOUT">
+    <h1>ABOUT US</h1>
+
+</div>
+<div class="aboutus">
+ <div class="about-image">
+    <img src="images/about.jpeg" alt="ABOUTAVATAR">
+ </div>
+ <div class="about-me">
+
+    <h2>Fullstack developer & <span>Designer</span></h2>
+    <p>Passionate about Fullstack development and on track to complete my Bachelor's degree in May 2024! 🎓💻 creating captivating web pages using HTML and CSS. I've even taken up frontend mentor challenges to enhance my skills.I publish blog posts about HTML and subsequently finalize the SEO process as well.</p>
+ </div>
+
+</div>
 
 
 
+<!-- SKILLS -->
+<div class="title">
+    <h1>SKILLS</h1>
 
-
-
-
+</div>
 
 <div class="skill-section">
     <div id="skills">
@@ -74,7 +96,7 @@
         </div>
 
         <div class="skill">
-            <div class="language">
+            <div  id="JAVASCRIPT" class="language">
                 JAVASCRIPT
             </div>
             <div class="skill-bar">
@@ -82,8 +104,25 @@
             </div>
         </div>
     </div>
-    <img src="images/skills.jpeg">
+    <!-- <img src="images/skills.jpeg"> -->
 
 </div>
+
+<!-- PROJECTS -->
+<div class="title" id="PROJECTS">
+    <h1> MY PROJECTS</h1>
+</div>
+<div class="project-container">
+    <div class="projects">
+        <div class="pro-image">
+<img src="images/3col.jpg">
+        </div>
+        <h2>3-column preview card component
+        </h2>
+        <p>This challenge is perfect if you're just getting started. The shift between the layouts will be a nice test if you're new to building responsive projects.</p>
+        <a href="">See Project</a>
+    </div>
+</div>
+
 </body>
 </html>
