--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
         <nav>
             <h2 id="portfolio">Port<span>folio</span></h2>
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="#HOME">Home</a></li>
                 <li><a href="#ABOUT">About Us</a></li>
                 <li><a href="#skills">Skills</a></li>
-                <li><a href="#">Projects</a></li>
-                                <li><a href="#">Contact Us</a></li>
+                <li><a href="#PROJECTS">Projects</a></li>
+                <li><a href="#">Contact Us</a></li>
 
 
             </ul>
 
         </nav>
-        <div class="picture">
+        <div id="HOME" class="picture">
             <img src="images/ceca670d-31cd-4f7b-a10e-10bc5b69c181-removebg.png" alt="">
         </div>
         <div class="about">
@@ -117,10 +117,56 @@
         <div class="pro-image">
 <img src="images/3col.jpg">
         </div>
+        <div class="pro-about">
+
         <h2>3-column preview card component
         </h2>
         <p>This challenge is perfect if you're just getting started. The shift between the layouts will be a nice test if you're new to building responsive projects.</p>
-        <a href="">See Project</a>
+<button>        <a href="https://www.frontendmentor.io/solutions/3column-preview-card-component-9_UhEVO1PU" target="_blank">See Project</a>
+</button>     
+   </div>
+    </div>
+    <div class="projects">
+        <div class="pro-image">
+<img src="images/WhatsApp Image 2023-08-09 at 8.51.49 PM.jpeg">
+        </div>
+        <div class="pro-about">
+
+        <h2>centimeter to inch conventer
+        </h2>
+        <p>"Presenting my CM to Inches Converter 🙂 : Harnessing the Power of the DOM for Seamless Unit Conversions 💜!"</p>
+<button>        <a href="https://cm-to-inches.netlify.app/" target="_blank">See Project</a>
+</button>     
+   </div>
+    </div>
+    <div class="projects">
+        <div class="pro-image">
+<img src="images/grid.webp">
+        </div>
+        <div class="pro-about">
+
+        <h2>Testimonials grid section
+
+
+        </h2>
+        <p>This challenge will be perfect practice for anyone wanting to test their CSS Grid skills. Grid is such a powerful addition to CSS, so it's worth getting to grips with it!</p>
+<button>        <a href="https://www.frontendmentor.io/solutions/testimonials-grid-section-aQB5i93DKY" target="_blank">See Project</a>
+</button>     
+   </div>
+    </div>
+
+</div>
+<div class="seemore" >
+    <button ><a href="https://www.frontendmentor.io/profile/SBharathikannan" target="_blank">SEE MORE WORKS</a></button>
+
+</div>
+
+<!-- CONTACT US -->
+<div class="contact-container" id="CONTACT-US">
+    <h2> Contact Us</h2>
+    <div class="icon">
+
+        <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 384 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z"/></svg>
     </div>
 </div>
 
