--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>PORTFOLIO</title>
     <link rel="stylesheet" href="style.css">
 <!-- font awesome -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
     <!-- google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -162,12 +163,35 @@
 </div>
 
 <!-- CONTACT US -->
-<div class="contact-container" id="CONTACT-US">
-    <h2> Contact Us</h2>
-    <div class="icon">
 
-        <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 384 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z"/></svg>
+<div class="title" id="CONTACT-US">
+    <h1> CONTACT US</h1>
+</div>
+
+<div class="contact" >
+    <div class="contact-item">
+        <span class="icon"><i class="fas fa-map-marker-alt"></i></span>
+        <span class="info">Chidambaranathapuram,India</span>
     </div>
+    <div class="contact-item">
+        <span class="icon"><i class="far fa-envelope"></i></span>
+        <span class="info">></a>bharathikannansambasivam@gmail.com</a></span>
+    </div>
+    <div class="contact-item">
+        <span class="icon"><i class="fas fa-phone"></i></span>
+        <span class="info">9500630655</span>
+    </div>
+</div>
+
+<div class="social-icons">
+   
+    <a href="mailto:bharathikannansambasivam@gmail.com"> <i class="far fa-envelope"></i></a>
+
+    <a href="#"><i class="fab fa-instagram"></i></a>
+    <a href="https://bharathikannansambasivam.medium.com/"><i class="fab fa-medium"></i></a>
+    <a href="#"><i class="fab fa-wordpress"></i></a>
+    <a href="https://www.linkedin.com/in/bharathikannan-sambasivam-458509222/"><i class="fab fa-linkedin"></i></a>
+    <a href="https://github.com/bharathikannansambasivam"><i class="fab fa-github"></i></a>
 </div>
 
 </body>
