--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                 <ul>
                     <li><a href="#HOME">Home</a></li>
                     <li><a href="#ABOUT">About Us</a></li>
-                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#SKILLS">Skills</a></li>
                     <li><a href="#PROJECTS">Projects</a></li>
-                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#CONTACT-US">Contact Us</a></li>
                 </ul>
             </nav>
             <!-- ... rest of your header content ... -->
@@ -66,7 +66,7 @@
 
 
 <!-- SKILLS -->
-<div class="title">
+<div class="title" id="SKILLS">
     <h1>SKILLS</h1>
 
 </div>
@@ -176,6 +176,7 @@
     <div class="contact-item">
         <span class="icon"><i class="fas fa-map-marker-alt"></i></span>
         <span class="info">Chidambaranathapuram,India</span>
+        <!-- <p>Chidambaranathapuram,India</p> -->
     </div>
     <div class="contact-item">
         <span class="icon"><i class="far fa-envelope"></i></span>
