--- a/index.html
+++ b/index.html
@@ -172,6 +172,29 @@
     <h1> CONTACT US</h1>
 </div>
 
+
+<!-- SUBMITING FORM -->
+ 
+<div class="contact-form">
+    <form action="https://formsubmit.co/bharathikannansambasivam@gmail.com" method="POST">
+        <div class="contactus-form">
+            <label for="name">Name</label>
+            <input name="name" type="text"  />
+          </div>
+          <div class="contactus-form">
+            <label for="email">Email</label>
+            <input name="email" type="email"  />
+          </div>
+          <div class="contactus-form">
+            <label for="comment">Message</label>
+            <textarea name="comment"rows="4"></textarea>
+          </div>
+          <button type="submit">Send</button>
+    </form>
+</div>
+
+
+
 <div class="contact" >
     <div class="contact-item">
         <span class="icon"><i class="fas fa-map-marker-alt"></i></span>
