--- a/index.html
+++ b/index.html
@@ -176,9 +176,11 @@
 <!-- SUBMITING FORM -->
 
 <div class="contact-form">
-    <form action="https://formsubmit.co/bkbharathi008@gmail.com" method="POST">        <div class="contactus-form">
+    <form action="https://formsubmit.co/el/keyibu" method="POST">
+
+    <div class="contactus-form">
             <label for="name">Name</label>
-            <input name="name" type="text"  />
+            <input name="name" type="text" required >
           </div>
           <div class="contactus-form">
             <label for="email">Email</label>
