--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 <!-- SUBMITING FORM -->
 
 <div class="contact-form">
-    <form action="https://formsubmit.io/bkbharathi008@gmail.com" method="POST">
+    <form action="https://formspree.io/f/mpzgpknj" method="POST">
 
     <div class="contactus-form">
             <label for="name">Name</label>
