--- a/index.html
+++ b/index.html
@@ -118,13 +118,13 @@
 
      
      
-      <div class="project-container   gap-2 flex-col sm:flex sm:flex-row  w-screen overflow-hidden h-full ">
+      <div class="project-container   gap-2 grid grid-cols-2 sm:flex sm:flex-row  w-screen overflow-hidden h-full ">
 
 
 
 
          <div class="projects 
-         bg-slate-700 sm:w-2/3 p-3  ">
+         bg-slate-700  sm:w-2/3 p-3  ">
 
             <div class="pro-image   ">
                <img class="h-52 w-screen " src="images/github_pro.jpeg">
